--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "lostsagacustomlauncher",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder build"
+    "deploy": "electron-builder build --publish always",
+    "build": "electron-builder build --publish never"
   },
   "author": "FauxSeal210",
   "license": "MIT",
   "devDependencies": {
     "electron": "^5.0.0",
-    "electron-builder": "^22.3.2"
+    "electron-builder": "^22.3.2",
+    "electron-updater": "^4.2.0"
   },
   "dependencies": {
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "electron-updater": "^4.2.0"
   },
   "build": {
     "productName": "LostsagaCustomLauncher",
@@ -37,10 +40,18 @@
       "language": "1042",
       "shortcutName": "로스트사가 런쳐 (FauxSeal210)"
     },
+    "publish": {
+      "provider": "github",
+      "token": "96604ea80be597609741f4e07c0ab490ac1d9c8a"
+    },
     "directories": {
       "buildResources": "resources/installer/",
       "output": "dist/",
       "app": "."
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FauxSeal210/LostsagaCustomLauncher.git"
   }
 }
